--- a/index.html
+++ b/index.html
@@ -116,6 +116,40 @@
 
 
 
+        <!--  -->
+        <section class="category">
+          <div class="cat-box">
+              <div class="item s1">
+                  <div class="content">
+                      <h2>Planning</h2>
+                      <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet </p>
+                  </div>
+                  <div class="serial">
+                      <h1>01</h1>
+                  </div>
+              </div>
+              <div class="item s2">
+                  <div class="content">
+                      <h2>Architecture</h2>
+                      <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet </p>
+                  </div>
+                  <div class="serial">
+                      <h1>02</h1>
+                  </div>
+              </div>
+              <div class="item s3">
+                  <div class="content">
+                      <h2>3D Design</h2>
+                      <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet </p>
+                  </div>
+                  <div class="serial">
+                      <h1>03</h1>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
