--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
               <script>
                 var owl = $('.owl-carousel');
                     owl.owlCarousel({
+                        dots:false,
                         items:1,
                         loop:true,
                         margin:10,
