--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   </div>
               </header>
               <!-- banner section -->
-              <section class="banner">
+              <!-- <section class="banner">
                   <div class="overlay"></div>
                   <div class="container">
                       <div class="row banner-content">
@@ -86,7 +86,86 @@
                           <div class="col-md-4"></div>
                       </div>
                   </div>
-              </section>
+                </section> -->
+
+
+                <section class="">
+                  <div class="owl-carousel owl-theme">
+                    <div class="item banner">
+                      <div class="overlay"></div>
+                      <div class="container">
+                          <div class="row banner-content">
+                              <div class="col-md-8">
+                                  <div class="banner-text">
+                                      <h3>Interior Design Solution For Your Business</h3>
+                                      <button>View Works</button>
+                                  </div>
+                              </div>
+                              <div class="col-md-4"></div>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="item banner-1">
+                      <div class="overlay"></div>
+                      <div class="container">
+                          <div class="row banner-content">
+                              <div class="col-md-8">
+                                  <div class="banner-text">
+                                      <h3>Interior Design Solution For Your Business</h3>
+                                      <button>View Works</button>
+                                  </div>
+                              </div>
+                              <div class="col-md-4"></div>
+                          </div>
+                      </div>
+                    </div>
+                </div>    
+                </section>
+
+
+
+
+
+                <!-- <div class="owl-carousel owl-theme">
+                  <div class="item"></div>
+              </div> -->
+
+              
+              <!-- <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <section class="banner">
+                    <div class="overlay"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="banner-text">
+                                    <h3>Interior Design Solution For Your Business</h3>
+                                    <button>View Works</button>
+                                </div>
+                            </div>
+                            <div class="col-md-4"></div>
+                        </div>
+                    </div>
+                  </section>
+                </div>
+
+                <div class="item">
+                  <div class="banner banner-1">
+                    <div class="overlay"></div>
+                    <div class="container">
+                        <div class="row banner-content">
+                            <div class="col-md-8">
+                                <div class="banner-text">
+                                    <h3>Interior Design Solution For Your Business</h3>
+                                    <button>View Works</button>
+                                </div>
+                            </div>
+                            <div class="col-md-4"></div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+            </div> -->
 
         
               <!--  -->
@@ -368,7 +447,7 @@
                         items:1,
                         loop:true,
                         margin:10,
-                        autoplay:true,
+                        autoplay:false,
                         autoplayTimeout:2000,
                         autoplayHoverPause:true
                     });
