--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
                           </div>
                       </div>
                     </div>
+                    <div class="item banner-1">
+                      <div class="overlay"></div>
+                      <div class="container">
+                          <div class="row banner-content">
+                              <div class="col-md-8">
+                                  <div class="banner-text">
+                                      <h3>Interior Design Solution For Your Business</h3>
+                                      <button>View Works</button>
+                                  </div>
+                              </div>
+                              <div class="col-md-4"></div>
+                          </div>
+                      </div>
+                    </div>
                 </div>    
                 </section>
 
@@ -417,10 +431,10 @@
                     </div>
                     <div class="col-md-4 info-pol">
                       <h4>Subscribe</h4>
-                      <div class="fieldo">
-                        <input type="email" placeholder="Enter your mail">
-                        <button class="insert">Subscribe</button>
-                      </div>
+                      <form class="fieldo">
+                        <input type="email" placeholder="Enter your mail" class="form-control">
+                        <button class="insert ">Subscribe</button>
+                      </form>
                       <p>Esteem spirit temper too say adieus who direct esteem esteems luckily.</p>
                     </div>
                   </div>
